test/libyul/yulSyntaxTests/tload_as_identifier_post_cancun.yul
{
    function f() {
        let tload := 0
    }
}
// ====
// EVMVersion: >=cancun
// ----
// ParserError 5568: (33-38): Cannot use builtin function name "tload" as identifier name.
